--- a/putaoteng.html
+++ b/putaoteng.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>魔镜介绍页</title>
     <link rel="stylesheet" type="text/css" href="putaoteng1.css">
-    <matename ="viewsport" content="width=device-width,initial-scale=1" />
+    <meta name ="viewport" content="width=device-width,initial-scale=1" />
 </head>
 <body>
     <img class="zuojiantou" src="zuojiantou.png">
@@ -12,7 +12,8 @@
         <img class="logo" src="logo.png">
     </div>
     <div class="wenben">
-    <p class="word">葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下现下聚会桌游道具。</p>
+    <p class="word">葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下现下聚会桌游道具。
+    </p>
     </div>
     <img class="zuotu" src="phone.png">
     <img class="youtu" src="youlogo.png">
